--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 nskein
-Sriram Krishnan <mail@sriramkrishnan.com>
+Sriram Krishnan <me@sriramk.com>
 
 Managed implementation of Skein. The source is in the public domain - feel free to do whatever you want with it.
 The code comes with no warranties whatsoever. You don't have to attribute usage but I wouldn't mind it :-)
