added a compiled binary in case i ever revisit this...

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+ch4-I made a gui in anticipation of making a bruteforcer for the xkcd contest at http://almamater.xkcd.com/
+
 nskein
 
 Managed implementation of Skein. The source is in the public domain - feel free to do whatever you want with it.
